changed path file to images

--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
 
             <div class="lefttop">
                 <div class="logocontainer">
-                    <img src="photo/logo.png" alt="" class="logo">
+                    <img src="/Users/nadhrahfuad/Desktop/Web Development/Javascript/photo/logo.png" alt="" class="logo">
                 </div>
 
                 <div class="timercontainer">
@@ -664,7 +664,7 @@
     <div class="maindiv landing flexcolumn">
         <h1 class="">Welcome to SwiftTrust Bank</h1>
          <div class="logocontainer">
-                    <img src="photo/logo.png" alt="" class="logolarge">
+                    <img src="/Users/nadhrahfuad/Desktop/Web Development/Javascript/photo/logo.png" alt="" class="logolarge">
         </div>
 
         <div class="btncontainerlanding ">
@@ -1389,6 +1389,8 @@
             let fiveMins = 300
 
                function tick(){
+
+               
 
                 let mins = String(Math.floor(fiveMins/60)).padStart(2,"0")
                 let secs = String(Math.floor(fiveMins%60)).padStart(2,"0")
